# ast2graph

./: .pre-commit-config.yaml  README.md  ROADMAP.md  auto_git_commit.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  quality.yml  release.yml
examples/: basic_usage.py  batch_processing.py  dependency_analysis.py
src/ast2graph/: __init__.py  api.py  batch_processor.py  batch_types.py  dependency_extractor.py  exceptions.py  graph_builder.py  graph_exporter.py  graph_structure.py  models.py  parser.py
temp_venv/: pyvenv.cfg
test_env/: pyvenv.cfg
test_venv/: pyvenv.cfg
test_venv/test_venv/: pyvenv.cfg
tests/: __init__.py
tests/integration/: __init__.py  test_end_to_end.py  test_error_scenarios.py  test_performance.py  test_real_projects.py
tests/unit/: __init__.py  test_api.py  test_api_dependencies.py  test_batch_processor.py  test_batch_types.py  test_dependency_extractor.py  test_graph_builder.py  test_graph_exporter.py  test_graph_structure.py  test_models.py  test_parser.py
要件定義/: エラー処理戦略.md  セキュリティ・認証設計.md  データ管理ポリシー.md  ログ・監査設計.md  並列処理設計.md  要件定義.md
計画/: 202507022359_計画_データ構造実装開始.md  202507030033_コード品質分析結果.md  202507030033_計画_コード品質分析結果.md  202507030036_計画_AST解析機能実装.md  202507030116_計画_グラフ構築機能実装.md  202507030116_計画_コード品質改善提案.md  202507030206_計画_コード品質確認結果.md  202507030232_計画_エクスポート機能実装.md  202507030232_計画_コード品質問題分析.md  202507030308_計画_コード品質分析結果.md  202507030308_計画_高レベルAPI実装.md  202507030356_計画_コード品質改善提案.md  202507030356_計画_テスト修正タスク.md  202507030711_計画_コード品質分析報告書.md  202507030711_計画_依存関係抽出機能実装.md  202507030813_計画_テスト失敗の修正計画.md  202507030813_計画_統合テスト実装.md  202507030858_計画_コード品質分析報告書.md  202507030858_計画_テスト失敗修正実装.md  202507030943_計画_テスト失敗修正タスク.md  202507031154_計画_コード品質分析報告書.md  202507031253_計画_コード品質分析結果と改善提案.md  202507031253_計画_バッチ処理と並列処理実装.md  202507031347_計画_コード品質改善提案.md  202507031347_計画_パフォーマンス最適化とメモリ効率化.md  202507031448_計画_README作成とドキュメント整備.md  202507031740_計画_コード品質改善提案.md  202507031853_計画_CI_CDパイプライン設定.md  API設計計画.md  ROADMAP.md  コア機能実装計画.md  テスト計画.md  データ構造実装計画.md  バッチ処理実装計画.md  性能最適化計画.md
計画/結果/: 202507030116_計画_グラフ構築機能実装_完了.md  (+8 more)
